--- a/.hintrc
+++ b/.hintrc
@@ -12,5 +12,13 @@
     "button-type": "off",
     "disown-opener": "off",
     "axe/structure": "off"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not chrome <= 109",
+    "not ios_saf <= 18.4",
+    "not safari <= 18.4",
+    "not samsung <= 27"
+  ]
 }
