--- a/.hintrc
+++ b/.hintrc
@@ -12,7 +12,8 @@
     "button-type": "off",
     "disown-opener": "off",
     "axe/structure": "off",
-    "axe/keyboard": "off"
+    "axe/keyboard": "off",
+    "axe/text-alternatives": "off"
   },
   "browserslist": [
     "defaults",
